<?xml version="1.0"?>
<package format="2">
  <name>hear_flight_controller</name>
  <version>0.0.1</version>
  <description>HEAR Flight Controller Package</description>
  <maintainer email="muhammad.humais@ku.ac.ae">Muhammad Ahmed Humais</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hear_msgs</depend>
  <depend>hear_hardware_interface</depend>
  <depend>tf2</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <export>
  </export>
</package>